--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,5 @@
 $corDeFundo: #040714;
 $corPrincipal: silver;
 $corTextoSecundario: #f9f9f9;
+$corDeFundoBotaoPrimario: #6421ff;
+$corDeFundoBotaoSecundario: #0063e5;
