--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -7,6 +7,14 @@
     text-align: center;
     background-size: cover;
 
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px) ;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -10px;
+    }
+
     .button {
         margin-top: 2vw;
         margin-bottom: 8px;
@@ -19,6 +27,10 @@
         &__brandig {
             max-width: 320px;
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
 
         .title--small {
@@ -27,6 +39,7 @@
 
         p {
             margin-bottom: 20px;
+
             &:last-child {
                 margin-top: 60px;
             }
@@ -36,16 +49,22 @@
             display: flex;
             justify-content: space-between;
 
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
             }
 
             img {
                 max-height: 60px;
             }
-
-            
-
 
         }
 
